# pm

./: CMakeLists.txt  LICENSE  README.md
include/: pm.hpp
include/pm/: concepts.hpp  json.hpp  malloc_callback.hpp  malloc_counter.hpp  noop_phase.hpp  noop_result.hpp  phase.hpp  result.hpp  stopwatch.hpp
include/pm/malloc/: hook.hpp
src/: CMakeLists.txt  malloc_callback.cpp  malloc_override.cpp
test/: CMakeLists.txt  examples.cpp  pm.cpp  pm_malloc.cpp
